Wed Jan 29 10:20:57 2003  George Lebl <jirka@5z.com>

	* src/Makefile.am, src/gnome-genius.desktop.in: updated the
	  .desktop to be correct, add categories and install in the
	  vfolder location and all that good stuff

Mon Jan 27 14:30:40 2003  George Lebl <jirka@5z.com>

	* doc/manual.txt: a small update

Mon Jan 27 14:13:43 2003  George Lebl <jirka@5z.com>

	* configure.in, Makefile.am, doc/Makefile.am, doc/manual.txt,
	  README:  Move the manual to doc/manual.txt and install that
	  in the data directory

	* src/calc.c, src/funclib.c, src/gnome-genius.c, src/genius.c:
	  add manual function to display manual, improve initial message,
	  info boxes in gui version now use textview and open up being
	  rather large, also always use the infobox for menuitems even if
	  console info printing is selected.

	* lib/calculus/limits.gel, lib/calculus/sums_products.gel, 
	  lib/linear_algebra/misc.gel, lib/number_theory/factoring.gel,
	  lib/number_theory/modulus.gel, lib/statistics/basic.gel:
	  Some naming fixes and a whole bunch of new help strings
	  
	* src/calc.[ch], src/eval.c, src/mpwrap.c, src/funclib.c,
	  src/genius.c, src/gnome-genius.c, src/matop.c:
	  Rename error var type to GeniusError, on protected id set
	  tell us which id was it.

	* src/calc.c: don't display Ans as undocumented and add some initial
	  info to help and translate some strings

	* src/geniustests.txt: add some more tests

	* src/calc.h: up year in copyright string

Sun Jan 26 12:40:49 2003  George Lebl <jirka@5z.com>

	* src/parse.y: fix precedence of function definition to be FUNCTION
	  and not EQUALS

Sat Jan 25 15:59:58 2003  George Lebl <jirka@5z.com>

	* lib/equation_solving/find_root.gel, lib/misc/misc.gel:  A bit of
	  renaming and add some help strings

	* src/calc.c, src/geloutput.[ch], src/genius.c, src/gnome-genius.c,
	  src/structs.h:  Fixup help output a bit, and can get column count
	  of an output even if full expressions is true 

	* configure.in: raise version
