@@ -133,6 +133,9 @@ ge_remove_stack_array(GelCtx *ctx)
 	}							\
 }
 
+static void mod_node(GelETree *n, mpw_ptr mod);
+static void mod_matrix (GelMatrixW *m, mpw_ptr mod);
+
 
 /*returns the number of args for an operator, or -1 if it takes up till
   exprlist marker or -2 if it takes one more for the first argument*/
@@ -1115,6 +1118,8 @@ static gboolean
 mod_integer_rational (mpw_t num, mpw_t mod)
 {
 	if (mpw_is_complex (num)) {
+		/* also on rationals but as integers */
+		(*errorout)(_("Modulo arithmetic only works on integers"));
 		return FALSE;
 	} else if (mpw_is_integer (num)) {
 		mpw_mod (num, num, mod);
@@ -1159,6 +1164,8 @@ mod_integer_rational (mpw_t num, mpw_t mod)
 		else
 			return TRUE;
 	} else {
+		/* also on rationals but as integers */
+		(*errorout)(_("Modulo arithmetic only works on integers"));
 		return FALSE;
 	}
 }
@@ -1204,8 +1211,6 @@ op_two_nodes (GelCtx *ctx, GelETree *ll, GelETree *rr, int oper,
 		}
 		if (ctx->modulo != NULL) {
 			if ( ! mod_integer_rational (res, ctx->modulo)) {
-				/* also on rationals but as integers */
-				(*errorout)(_("Modulo arithmetic only works on integers"));
 				error_num = NUMERICAL_MPW_ERROR;
 			}
 		}
@@ -1218,7 +1223,7 @@ op_two_nodes (GelCtx *ctx, GelETree *ll, GelETree *rr, int oper,
 			n->op.args->any.next->any.next = NULL;
 			n->op.nargs = 2;
 			mpw_clear(res);
-			error_num=NO_ERROR;
+			error_num = NO_ERROR;
 			return n;
 		}
 		return gel_makenum_use(res);
@@ -1501,13 +1506,6 @@ matrix_pow_op(GelCtx *ctx, GelETree *n, GelETree *l, GelETree *r)
 			return TRUE;
 		}
 
-		/* FIXME: eeeek, must handle modulo case here */
-		if (ctx->modulo != NULL) {
-			(*errorout)(_("Negative matrix powers in modulo mode not yet implemented"));
-			gel_matrixw_free (mi);
-			return TRUE;
-		}
-		
 		m = gel_matrixw_copy(m);
 		if(!gel_value_matrix_gauss(m,TRUE,FALSE,TRUE,NULL,mi)) {
 			(*errorout)(_("Matrix appears singular and can't be inverted"));
@@ -1518,6 +1516,10 @@ matrix_pow_op(GelCtx *ctx, GelETree *n, GelETree *l, GelETree *r)
 		gel_matrixw_free(m);
 		m = mi;
 		free_m = TRUE;
+
+		/* Mod if in modulo mode */
+		if (ctx->modulo != NULL)
+			mod_matrix (m, ctx->modulo);
 
 		power = -power;
 	}
@@ -1600,12 +1602,6 @@ pure_matrix_div_op(GelCtx *ctx, GelETree *n, GelETree *l, GelETree *r)
 		return TRUE;
 	}
 
-	/* FIXME: this because of gauss */
-	if (ctx->modulo != NULL) {
-		(*errorout)(_("Matrix division not implemented in modulo mode"));
-		return TRUE;
-	}
-
 	mi = gel_matrixw_new();
 	gel_matrixw_set_size(mi,gel_matrixw_width(m1),
 			 gel_matrixw_height(m1));
@@ -1628,6 +1624,10 @@ pure_matrix_div_op(GelCtx *ctx, GelETree *n, GelETree *l, GelETree *r)
 		return TRUE;
 	}
 	gel_matrixw_free(toinvert);
+
+	/* Mod if in modulo mode */
+	if (ctx->modulo != NULL)
+		mod_matrix (mi, ctx->modulo);
 
 	if(n->op.oper == E_BACK_DIV)
 		m1 = mi;
@@ -1668,12 +1668,6 @@ value_matrix_div_op(GelCtx *ctx, GelETree *n, GelETree *l, GelETree *r)
 		return TRUE;
 	}
 
-	/* FIXME: this because of gauss */
-	if (ctx->modulo != NULL) {
-		(*errorout)(_("Matrix division not implemented in modulo mode"));
-		return TRUE;
-	}
-
 	mi = gel_matrixw_new();
 	gel_matrixw_set_size(mi,gel_matrixw_width(m),
 			 gel_matrixw_height(m));
@@ -1692,6 +1686,10 @@ value_matrix_div_op(GelCtx *ctx, GelETree *n, GelETree *l, GelETree *r)
 	}
 	gel_matrixw_free(m);
 	m = mi;
+
+	/* Mod if in modulo mode */
+	if (ctx->modulo != NULL)
+		mod_matrix (mi, ctx->modulo);
 
 	for(i=0;i<gel_matrixw_width(m);i++)
 		for(j=0;j<gel_matrixw_width(m);j++) {
@@ -1726,33 +1724,53 @@ polynomial_add_sub_op (GelCtx *ctx, GelETree *n, GelETree *l, GelETree *r)
 }
 
 static void
-mod_node(GelETree *n, mpw_ptr mod)
+mod_matrix (GelMatrixW *m, mpw_ptr mod)
 {
-	if(n->type == VALUE_NODE) {
-		if ( ! mod_integer_rational (n->val.value, mod)) {
-			if (error_num != NO_ERROR) { /*FIXME: for now ignore errors in moding*/
-				error_num = NO_ERROR;
-			} else {
-				/* also on rationals but as integers */
-				(*errorout)(_("Modulo arithmetic only works on integers"));
-			}
-			return;
-		}
-	} else if(n->type == MATRIX_NODE) {
-		int i,j;
-		int w,h;
-		if(!n->mat.matrix) return;
-		w = gel_matrixw_width(n->mat.matrix);
-		h = gel_matrixw_height(n->mat.matrix);
-		for(i=0;i<w;i++) {
-			for(j=0;j<h;j++) {
-				GelETree *t = gel_matrixw_set_index(n->mat.matrix,i,j);
-				if (t != NULL) {
-					mod_node(t,mod);
-				}
+	int i,j;
+	int w,h;
+
+	/*make us a private copy!*/
+	gel_matrixw_make_private(m);
+
+	w = gel_matrixw_width (m);
+	h = gel_matrixw_height (m);
+	for (i = 0; i < w; i++) {
+		for (j = 0; j < h; j++) {
+			GelETree *t = gel_matrixw_set_index (m, i, j);
+			if (t != NULL) {
+				mod_node (t, mod);
 			}
 		}
 	}
+}
+
+static void
+mod_node (GelETree *n, mpw_ptr mod)
+{
+	if(n->type == VALUE_NODE) {
+		if ( ! mod_integer_rational (n->val.value, mod)) {
+			GelETree *nn;
+			GET_NEW_NODE(nn);
+			nn->type = OPERATOR_NODE;
+			nn->op.oper = E_MOD_CALC;
+			nn->op.args = copynode (n);
+			nn->op.args->any.next = gel_makenum (mod);
+			nn->op.args->any.next->any.next = NULL;
+			nn->op.nargs = 2;
+			error_num = NO_ERROR;
+			replacenode (n, nn);
+		}
+	} else if(n->type == MATRIX_NODE) {
+		if (n->mat.matrix != NULL)
+			mod_matrix (n->mat.matrix, mod);
+	}
+}
+
+void
+gel_mod_node (GelCtx *ctx, GelETree *n)
+{
+	if (ctx->modulo != NULL)
+		mod_node (n, ctx->modulo);
 }
 
 /*return TRUE if node is true (a number node !=0), false otherwise*/
@@ -4709,6 +4727,10 @@ iter_operator_pre(GelCtx *ctx)
 	case E_DEREFERENCE:
 		if(!iter_derefvarop(ctx,n))
 			return FALSE;
+		if ((n->type == VALUE_NODE ||
+		     n->type == MATRIX_NODE) &&
+		    ctx->modulo != NULL)
+			mod_node (n, ctx->modulo);
 		iter_pop_stack(ctx);
 		break;
 
@@ -4843,7 +4865,12 @@ iter_operator_post(GelCtx *ctx)
 		/* FIXME: maybe we should always replace things here,
 		 * not just for values and matrices */
 		if (n->op.args->type == VALUE_NODE ||
-		    n->op.args->type == MATRIX_NODE) {
+		    n->op.args->type == MATRIX_NODE ||
+		    /* also replace if we got a E_MOD_CALC oper since
+		     * that can only mean an error occured, and we
+		     * don't want to duplicate the mod */
+		    (n->op.args->type == OPERATOR_NODE &&
+		     n->op.args->op.oper == E_MOD_CALC)) {
 			GelETree *t = n->op.args;
 			gel_freetree (n->op.args->any.next);
 			n->op.args = NULL;
@@ -5071,6 +5098,10 @@ iter_eval_etree(GelCtx *ctx)
 			EDEBUG(" IDENTIFIER NODE");
 			if(!iter_variableop(ctx, n))
 				return FALSE;
+			if ((n->type == VALUE_NODE ||
+			     n->type == MATRIX_NODE) &&
+			    ctx->modulo != NULL)
+				mod_node (n, ctx->modulo);
 			iter_pop_stack(ctx);
 			break;
 		case STRING_NODE:
