@@ -489,6 +489,8 @@ IsPrimeProbability(8,5)						0
 NextPrime(23)							29
 NextPrime(28)							29
 function f(x) = 3*x + 4 mod 11 ; f(8)				6
-10:2:14								[10,12,14]
-10:-1:8								[10,9,8]
+10:2:14								`[10,12,14]
+10:-1:8								`[10,9,8]
 10:88:2								(10:88:2)
+A=[1,2;3,4];B=A^-1 mod 5					[3,1;4,2]
+A=[1,2;3,4];A^-1 * A mod 5					[1,0;0,1]
