@@ -1,10 +1,13 @@
 Changes to 0.5.2
 
+* UP TO DATE ONLINE MANUAL: well, don't be too excited, it's just a text
+  file, but can now be viewed directly from genius.
 * Use vte instead of zvt since zvt was giving me fits (vte is on the other
   hand giving me different fits).
 * Fix precendence of defining a function (now "function f(x) = foo mod bar"
   will work as expected)
 * Using rationals in modular mode will take the inverses mod n
+* Negative powers and division of matrixes in modular mode
 * Implement IsPrimeProbability, LucasNumber, ModInvert, EulerPhi,
   Subfactorial, GoldenRatio
 * Use gmp for NextPrime
@@ -14,6 +17,8 @@ Changes to 0.5.2
 * The help output is now nicer
 * The readline helper is now in the libexec directory as it should be
 * Fixup the plugin API a bit and hide the test plugin from the GUI
+* The .desktop is now updated, using intltool and installed in proper new
+  location and all that good stuff
 * Random minor fixes and cleanup
 
 Changes to 0.5.1
