@@ -1,3 +1,13 @@
+Wed Jan 29 14:01:54 2003  George Lebl <jirka@5z.com>
+
+	* src/eval.[ch], src/funclib.c: mod matrices after gauss (gauss is
+	  too stupid to mod ... no pun intended).  Allow negative powers
+	  of matrices and division in mod mode.
+
+	* src/geniustests.txt: add some more tests
+
+	* doc/manual.txt: update a bit
+
 Wed Jan 29 10:20:57 2003  George Lebl <jirka@5z.com>
 
 	* src/Makefile.am, src/gnome-genius.desktop.in: updated the
